# sgx-ra-sample

./: CMakeLists.txt  README.md  settings.xml
client/: CMakeLists.txt  client.cpp
client/app/: client.cpp  settings.cpp  settings.hpp  settings.xml
client/enclave/: enclave.cpp  enclave.edl
cmake/: FindSGX.cmake
common/: encryption.hpp  key.hpp  settings_reader.hpp  sgx_declarations.hpp  utils.cpp  utils.hpp
protos/: data_server.proto  greetings.proto
server/: CMakeLists.txt  agent.hpp  agent_curl.cpp  agent_curl.hpp  agent_wget.cpp  agent_wget.hpp  base64.hpp  connection.hpp  crypto_functions.cpp  crypto_functions.hpp  dataset_reader.hpp  ias_services.hpp  iasrequest.cpp  iasrequest.hpp  server.cpp  settings.cpp  settings.hpp  settings.xml
